--- a/package.json
+++ b/package.json
@@ -6,16 +6,30 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
+    "braintree": "^1.35.0",
     "compression": "^1.5.2",
-    "method-override": "^2.3.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
     "glob": "^5.0.3",
+    "helmet": "^1.1.0",
+    "method-override": "^2.3.0",
+    "mime": "^1.3.4",
     "mongoose": "^4.1.2",
-    "marko": "^2.7.9"
+    "morgan": "^1.6.1",
+    "multer": "^1.1.0",
+    "node-uuid": "^1.4.7",
+    "passport-facebook": "^2.1.0",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-local-mongoose": "^4.0.0",
+    "passport-strategy": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "sendgrid": "^2.0.0",
+    "serve-favicon": "^2.3.0",
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
