--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bluebird": "^3.3.1",
     "body-parser": "^1.13.3",
     "braintree": "^1.35.0",
+    "co": "^4.6.0",
+    "co-express": "^1.2.1",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.1.0",
@@ -18,6 +21,7 @@
     "helmet": "^1.1.0",
     "method-override": "^2.3.0",
     "mime": "^1.3.4",
+    "moment": "^2.11.2",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
