--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bluebird": "^3.3.1",
     "body-parser": "^1.13.3",
     "braintree": "^1.35.0",
-    "co": "^4.6.0",
-    "co-express": "^1.2.1",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.3",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "glob": "^5.0.3",
@@ -41,5 +41,20 @@
     "gulp-nodemon": "^2.0.2",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.0"
-  }
+  },
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adamjking3/UserSystem.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/adamjking3/UserSystem/issues"
+  },
+  "homepage": "https://github.com/adamjking3/UserSystem#readme",
+  "description": ""
 }
