--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js",
+    "test": "mocha test.js"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
     "braintree": "^1.35.0",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "co": "^4.6.0",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.3",
     "dotenv": "^2.0.0",
-    "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "glob": "^5.0.3",
     "helmet": "^1.1.0",
+    "koa": "^1.1.2",
     "method-override": "^2.3.0",
     "mime": "^1.3.4",
     "moment": "^2.11.2",
