--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.3",
     "dotenv": "^2.0.0",
+    "express": "^4.14.1",
     "express-handlebars": "^2.0.1",
     "glob": "^5.0.3",
     "helmet": "^1.1.0",
